--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "less-middleware": "3.1.0",
     "mongodb": "^3.5.9",
     "mongojs": "^3.1.0",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "node-fetch": "^2.6.1"
   }
 }
