--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "@influxdata/influxdb-client": "^1.12.0",
     "bootstrap": "^3.4.1",
     "cookie-parser": "~1.4.4",
     "country-list": "2.2.0",
